Updated select resource to pick on compatible types

--- a/demo/audigame/audigame.html
+++ b/demo/audigame/audigame.html
@@ -143,9 +143,10 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             attached: function () {
               this.$.dudeGraphElement.initialize();
               this.$.dudeGraphElement.set("graph.graphData.resources", [
-                  {"item": {"name": "test.png", "data": {"file_name": "http://lorempixel.com/512/512/", "size": 1234567890}}},
-                  {"item": {"name": "cover.png", "data": {"file_name": "http://lorempixel.com/320/220/", "size": 12345}}},
-                  {"item": {"name": "skull.png", "data": {"file_name": "http://lorempixel.com/320/210/", "size": 34}}}
+                  {"item": {"name": "image1.png", "data": {"file_name": "http://goo.gl/aT8b1W", "size": 512}}},
+                  {"item": {"name": "image2.png", "data": {"file_name": "http://goo.gl/eL4sot", "size": 512}}},
+                  {"item": {"name": "sound1.mp3", "data": {"file_name": "http://goo.gl/JVcU3g", "size": 2048}}},
+                  {"item": {"name": "sound2.mp3", "data": {"file_name": "http://goo.gl/64THWa", "size": 2048}}}
               ]);
             },
 
