--- a/panels/dude-graph-select-resource.html
+++ b/panels/dude-graph-select-resource.html
@@ -17,9 +17,8 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
     <template>
         <dude-resource-manager
             resources="[[ data.graph.graphData.resources ]]"
-            suf="[[ data.graph.graphData.resourceProperty.propertyValue.resourceValueType ]]">
+            resource-type="[[ resourceType ]]">
         </dude-resource-manager>
-        <!-- resource="data.graph.graphData.resourceProperty.propertyValue.resourceValue"> -->
     </template>
     <script>
         /**
@@ -40,6 +39,9 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                     "type": String,
                     "value": "Select resource",
                     "readonly": true
+                },
+                "resourceType": {
+                    "type": String
                 }
             },
             listeners: {
@@ -57,7 +59,9 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             /**
              * Called when the panel is opened
              */
-            opened: function () {},
+            opened: function () {
+                this.set("resourceType", this.get("data.graph.graphData.resourceProperty.propertyValue.resourceValueType"));
+            },
 
             /**
              * Called when the panel is the top of the stack
