--- a/dude-graph.html
+++ b/dude-graph.html
@@ -429,7 +429,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                     } else if (renderNode instanceof dudeGraph.RenderBlock) {
                         dudeGraphElement.set("selectedRenderBlock", renderNode);
                         dudeGraphElement.set("selectedRenderGroup", null);
-                        dudeGraphElement.$["inspector"].pushStack(renderNode.customPanel || "dude-graph-edit-block");
+                        dudeGraphElement.$["inspector"].pushStack(renderNode.renderPanel || "dude-graph-edit-block");
                     }
                 });
                 this.get("renderer").on("unselect-all", function () {
