--- a/dude-graph.html
+++ b/dude-graph.html
@@ -399,16 +399,15 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 config.blockColors.Start = this.getComputedStyleValue("--dude-block-start-color");
                 config.blockColors.Step = this.getComputedStyleValue("--dude-block-step-color");
                 config.blockColors.End = this.getComputedStyleValue("--dude-block-end-color");
-                config.blockColors.GoBlock = this.getComputedStyleValue("--dude-block-go-color");
-                config.blockColors.RepeatBlock = this.getComputedStyleValue("--dude-block-repeat-color");
-                config.blockColors.AssignBlock = this.getComputedStyleValue("--dude-block-assign-color");
-                config.blockColors.ConditionBlock = this.getComputedStyleValue("--dude-block-condition-color");
-                config.blockColors.PrintBlock = this.getComputedStyleValue("--dude-block-print-color");
-                config.blockColors.FormatBlock = this.getComputedStyleValue("--dude-block-format-color");
-                config.blockColors.ExpressionBlock = this.getComputedStyleValue("--dude-block-expression-color");
-                config.blockColors.RandomRangeBlock = this.getComputedStyleValue("--dude-block-random-range-color");
-                config.blockColors.TrophyBlock = this.getComputedStyleValue("--dude-block-trophy-color");
-
+                config.blockColors.Go = this.getComputedStyleValue("--dude-block-go-color");
+                config.blockColors.Condition = this.getComputedStyleValue("--dude-block-condition-color");
+                config.blockColors.Repeat = this.getComputedStyleValue("--dude-block-repeat-color");
+                config.blockColors.Assign = this.getComputedStyleValue("--dude-block-assign-color");
+                config.blockColors.Print = this.getComputedStyleValue("--dude-block-print-color");
+                config.blockColors.format = this.getComputedStyleValue("--dude-block-format-color");
+                config.blockColors.expression = this.getComputedStyleValue("--dude-block-expression-color");
+                config.blockColors.random_range = this.getComputedStyleValue("--dude-block-random-range-color");
+                config.blockColors.trophy = this.getComputedStyleValue("--dude-block-trophy-color");
                 return config;
             },
 
