--- a/dude-graph.html
+++ b/dude-graph.html
@@ -49,16 +49,10 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
          */
         ::content text {
             font-family: var(--dude-font-content);
-            fill: var(--dude-light1-color);
         }
 
-        ::content .dude-graph-block-title {
-            fill: var(--dude-light1-color);
-            font-weight: bold;
-        }
-
+        ::content .dude-graph-block-title,
         ::content .dude-graph-group-title {
-            fill: var(--dude-dark1-color);
             font-weight: bold;
         }
 
@@ -74,6 +68,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         /**
          * Blocks
          */
+
         ::content .dude-graph-block > rect {
             transition-duration: .2s;
             transition-property: stroke;
@@ -87,6 +82,14 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
         ::content .dude-graph-block.dude-graph-selected > rect {
             stroke: var(--dude-status-info-color);
             stroke-width: 2px;
+        }
+
+        ::content .dude-graph-block-light {
+            fill: var(--dude-light1-color);
+        }
+
+        ::content .dude-graph-block-dark {
+            fill: var(--dude-dark1-color);
         }
 
         /**
