--- a/dude-graph.html
+++ b/dude-graph.html
@@ -44,6 +44,15 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             background-color: var(--dude-background2-color);
         }
 
+        ::content #autocompletePopup > div {
+            background-color: var(--dude-background2-color);
+            -webkit-border-radius: 5px;
+            -moz-border-radius: 5px;
+            border-radius: 5px;
+            padding: 5px;
+            opacity: 0.95;
+        }
+
         /**
          * Typography
          */
