Story blocks text point is now of Text pointValueType

--- a/dude-graph.html
+++ b/dude-graph.html
@@ -407,6 +407,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 var config = this.get("rendererConfig");
                 config.typeColors.Stream = this.getComputedStyleValue("--dude-type-stream-color");
                 config.typeColors.String = this.getComputedStyleValue("--dude-type-string-color");
+                config.typeColors.Text = this.getComputedStyleValue("--dude-type-string-color");
                 config.typeColors.Number = this.getComputedStyleValue("--dude-type-number-color");
                 config.typeColors.Boolean = this.getComputedStyleValue("--dude-type-boolean-color");
                 config.typeColors.Object = this.getComputedStyleValue("--dude-type-object-color");
