--- a/panels/dude-inspector.html
+++ b/panels/dude-inspector.html
@@ -19,44 +19,40 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             @apply(--layout-flex);
         }
 
-        #panel {
+        #inspector-panel {
             @apply(--layout-vertical);
             @apply(--layout-flex);
+            background-color: var(--dude-background2-color);
         }
 
-        #stack {
-            overflow: auto;
-        }
-
-        .title {
-            font-family: var(--dude-font-primary);
-            text-align: center;
-            padding: 10px;
-            font-weight: bold;
-            color: var(--dude-dark1-color);
-            border-bottom: 2px solid var(--dude-background1-color);
-        }
-
-        #panel i {
+        #inspector-panel > i {
             z-index: 10;
             cursor: pointer;
             position: absolute;
             top: 10px;
             left: 10px;
+        }
+
+        #panel-title {
+            border-bottom: 2px solid var(--dude-background1-color);
+            font-family: var(--dude-font-primary);
+            font-weight: bold;
+            text-align: center;
+            padding: 10px;
             color: var(--dude-dark1-color);
         }
 
-        #button {
+        #show-button {
+            border-radius: 50%;
+            background: var(--dude-background2-color);
             position: relative;
+            cursor: pointer;
             width: 100%;
             height: 100%;
-            border-radius: 50%;
-            background: var(--dude-background1-color);
-            color: var(--dude-light2-color);
-            cursor: pointer;
+            color: var(--dude-dark1-color);
         }
 
-        #button i {
+        #show-button i {
             position: absolute;
             margin: 8px 12px;
             top: 10px;
@@ -65,18 +61,18 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
 
         /* closing */
         :host(.closed) {
+            position: absolute;
             width: 50px;
             height: 50px;
-            position: absolute;
             top: 10px;
             right: 10px;
         }
 
-        :host(.closed) #panel {
+        :host(.closed) #inspector-panel {
             display: none;
         }
 
-        :host(:not(.closed)) #button {
+        :host(:not(.closed)) #show-button {
             display: none;
         }
 
@@ -98,22 +94,26 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
             }
         }
 
-        :host(:not(.closed)) #panel {
+        :host(:not(.closed)) #inspector-panel {
             animation: open-panel 1s;
         }
 
-        :host(.closed) #panel {
+        :host(.closed) #inspector-panel {
             animation: close-panel 1s;
+        }
+
+        #panel {
+            overflow: auto;
         }
     </style>
     <template>
-        <div id="button" on-click="_openPanel">
+        <div id="show-button" on-click="_openPanel">
             <i class="fa fa-info"></i>
         </div>
-        <div id="panel">
-            <i on-click="popStack" class="fa fa-close"></i>
-            <div class="title">[[ _panelTitle(topPanel, topPanel.panelTitle) ]]</div>
-            <div id="stack"></div>
+        <div id="inspector-panel">
+            <i class="fa fa-close" on-click="popStack"></i>
+            <div id="panel-title">[[ _panelTitle(topPanel, topPanel.panelTitle) ]]</div>
+            <div id="panel"></div>
         </div>
     </template>
     <script>
@@ -178,7 +178,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 }
                 this.set("topPanel", document.createElement(panelElementName));
                 this._panels.push(this.get("topPanel"));
-                this.$.stack.appendChild(this.get("topPanel"));
+                this.$.panel.appendChild(this.get("topPanel"));
                 return this.get("topPanel");
             },
 
@@ -197,7 +197,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                     if (typeof currentElement.closed === "function") {
                         currentElement.closed();
                     }
-                    this.$.stack.removeChild(currentElement);
+                    this.$.panel.removeChild(currentElement);
                     this.set("topPanel", this._panels[this._panels.length - 1] || null);
                     if (this.get("topPanel") !== null) {
                         this.get("topPanel").removeAttribute("hidden");
